--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@tanstack/react-query": "^5.62.11",
+        "axios": "^1.7.9",
         "framer-motion": "^11.12.0",
         "lucide-react": "^0.453.0",
         "react": "^18.3.1",
@@ -18,6 +20,7 @@
         "recharts": "^2.13.3"
     },
     "devDependencies": {
+        "@types/axios": "^0.9.36",
         "@types/react": "^18.3.6",
         "@types/react-dom": "^18.3.0",
         "@vitejs/plugin-react": "^4.3.1",
